--- a/Flask-Project-Ray-main 2/13 - Logout & Customizations/market/templates/base.html
+++ b/Flask-Project-Ray-main 2/13 - Logout & Customizations/market/templates/base.html
@@ -14,7 +14,7 @@
    </head>
    <body>
     <nav class="navbar navbar-expand-md navbar-dark bg-dark">
-      <a class="navbar-brand" href="#">Flask Surf</a>
+      <a class="navbar-brand" href="#">Flask Market</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -24,7 +24,7 @@
                 <a class="nav-link" href="{{ url_for('home_page') }}">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="{{ url_for('market_page') }}">Surf Spots</a>
+                <a class="nav-link" href="{{ url_for('market_page') }}">Market</a>
             </li>
         </ul>
           {% if current_user.is_authenticated %}
@@ -82,8 +82,8 @@
    </body>
    <style>
       body {
-      background-color: #51512;
-      color: black
+      background-color: #212121;
+      color: white
       }
    </style>
 </html>
