--- a/Flask-Project-Ray-main 2/Flask-Project-Ray-main 2/Flaskproject/market/templates/base.html
+++ b/Flask-Project-Ray-main 2/Flask-Project-Ray-main 2/Flaskproject/market/templates/base.html
@@ -14,7 +14,7 @@
    </head>
    <body>
     <nav class="navbar navbar-expand-md navbar-dark bg-dark">
-      <a class="navbar-brand" href="#">Flask Surf</a>
+      <a class="navbar-brand" href="#">Beach Guide</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -29,12 +29,6 @@
         </ul>
           {% if current_user.is_authenticated %}
             <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link" style="color: lawngreen; font-weight: bold">
-                        <i class="fas fa-coins"></i>
-                        {{ current_user.prettier_budget }}
-                    </a>
-                </li>
                 <li class="nav-item">
                     <a class="nav-link">Welcome, {{ current_user.username }}</a>
                 </li>
@@ -69,12 +63,8 @@
       {% block content %}
 
       {% endblock %}
-      <!-- Future Content here -->
 
 
-
-      <!-- Optional JavaScript -->
-      <!-- jQuery first, then Popper.js, then Bootstrap JS -->
       <script src='https://kit.fontawesome.com/a076d05399.js'></script>
       <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
       <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
@@ -82,7 +72,7 @@
    </body>
    <style>
       body {
-      background-color: #51512;
+      background-color: #98F5FF;
       color: black
       }
    </style>
